--- a/python-app/compose.yml
+++ b/python-app/compose.yml
@@ -1,5 +1,7 @@
 services:
-  pyyhon-app:
+  python-app:
     image: python-app
-    container:_name_ python-app
+    container_name: python-app
+    ports:
+      - 8082:5000
     
