--- a/python-app/manifiesto.yaml
+++ b/python-app/manifiesto.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: python-app
-          image: renatoapaza/python-app:3.udi
+          image: alberto425/ahp:v1
           imagePullPolicy: Always
           ports:
             - containerPort: 5000
